--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title>Lista Cognomi</title>
   </head>
   <body>
+   <div id="squadra">
 
+   </div>
   <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
