--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
    <div id="squadra">
-
+    <p>Tu sei nella Posizione Numero:</p>
+    <p id="posizione_cognome"></p>
    </div>
   <script src="js/script.js" charset="utf-8"></script>
   </body>
